syntax = "proto3";

enum PB_ActuatorsTypeEnum
{
  SERVO = 0;
  PUMP = 1;
  POSITIONAL = 2;
}

enum PB_ActuatorsGroupEnum
{
  NO_GROUP = 0;
}

enum PB_ServoEnum
{
    LXSERVO_UNUSED = 0; // The first enum value must be zero in proto3.
    LXSERVO_BALL_SWITCH = 1;
    LXSERVO_RIGHT_ARM = 2;
    LXSERVO_LEFT_ARM = 4;
}

enum PB_PumpEnum
{
    PUMP_RIGHT_ARM = 0;
    PUMP_LEFT_ARM = 1;
}

enum PB_PositionalActuatorEnum
{
    MOTOR_CENTRAL_LIFT = 0;
    MOTOR_CONVEYOR_LAUNCHER = 1;
    ONOFF_LED_PANELS = 2;
    ANALOGSERVO_CHERRY_ARM = 3;
    ANALOGSERVO_CHERRY_ESC = 4;
    ANALOGSERVO_CHERRY_RELEASE = 5;
    LXMOTOR_RIGHT_ARM_LIFT = 6;
    LXMOTOR_LEFT_ARM_LIFT = 7;
}

message PB_Servo {
    PB_ActuatorsGroupEnum group = 1;
    uint32 order = 2;
    PB_ServoEnum id = 3;
    uint32 position = 4;
    uint32 command = 5;
}

message PB_Pump {
    PB_ActuatorsGroupEnum group = 1;
    uint32 order = 2;
    PB_PumpEnum id = 3;
    bool activated = 4;
    bool under_pressure = 5;
}

message PB_PositionalActuator {
    PB_ActuatorsGroupEnum group = 1;
    uint32 order = 2;
    PB_PositionalActuatorEnum id = 3;
    int32 command = 4;
}

message PB_ActuatorsState {
    repeated PB_Servo servos = 1;
    repeated PB_Pump pumps = 2;
    repeated PB_PositionalActuator positional_actuators = 3;
}

message PB_ServoCommand {
    PB_ServoEnum id = 1;
    uint32 command = 2;
    uint32 time = 3;
}

message PB_PumpCommand {
    PB_PumpEnum id = 1;
    bool command = 2;
}

message PB_PositionalActuatorCommand {
    PB_PositionalActuatorEnum id = 1;
    int32 command = 2;
}

message PB_ActuatorCommand {
    oneof command {
        PB_ServoCommand servo = 1;
        PB_PumpCommand pump = 2;
        PB_PositionalActuatorCommand positional_actuator = 3;
    }
}
